[package]
name = "rjc"
version = "0.1.0"
edition = "2021"
description = "rjc converts the output of many commands, file-types, and strings to JSON or YAML"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.1", features = ["derive"] }
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
serde_yaml = "0.9.16"
toml = "0.5.10"
