[package]
name = "rjc"
version = "0.2.1"
edition = "2021"
description = "rjc converts the output of many commands, file-types, and strings to JSON, YAML, or TOML"
license = "MPL-2.0"
homepage = "https://rjc.vercel.app/"
repository = "https://github.com/clearfeld/rjc"
keywords = ["cli"]
categories = ["command-line-utilities", "text-processing", "parser-implementations", "parsing-tools"]
# TODO excludes

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.1", features = ["derive"] }
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
serde_yaml = "0.9.16"
toml = "0.7.3"
csv = "1.2.2"
chrono = { version = "0.4.26", features = ["serde"] }